apps/base/media-proxy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: media-proxy-cache
  namespace: default
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: media-proxy-cache
  sessionAffinity: None
  type: ClusterIP
